style: Fix styles in footer on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -117,4 +117,8 @@
 	.App-logo {
 		height: 60px;
 	}
+
+	.App-footer p {
+		font-size: 0.6em;
+	}
 }
